--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:debug": "react-scripts --inspect start --no-cache --runInBand"
   },
   "eslintConfig": {
     "extends": "react-app"
